--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"stop-pm2": "pm2 stop .pm2-process.json",
 		"clean": "rm -rf node_modules package-lock.json && npm install",
 		"update": "rm -f package-lock.json && npm update",
-		"vendor": "cpy node_modules/cash-dom/dist/cash.min.js www/js/vendor/cash-dom/ && cpy node_modules/bulma/css/bulma.min.css www/css/vendor/bulma/",
+		"vendor": "cpy node_modules/cash-dom/dist/cash.min.js www/js/vendor/cash-dom/ && cpy node_modules/bulma/css/bulma.min.css www/css/vendor/bulma/ && cpy node_modules/vanilla-lazyload/dist/lazyload.min.js www/js/vendor/lazyload/",
 		"lint": "eslint ./ --cache --ignore-pattern .gitignore",
 		"lint-fix": "eslint ./ --cache --ignore-pattern .gitignore --fix --rule 'snakecasejs/snakecasejs: off'",
 		"git-set-upstream": "git remote add upstream git@github.com:ptkdev/yourprojectname.git && git fetch upstream",
@@ -72,6 +72,7 @@
 		"lowdb": "latest",
 		"mysql": "latest",
 		"nunjucks": "latest",
+		"vanilla-lazyload": "latest",
 		"passport": "latest",
 		"passport-facebook": "latest",
 		"passport-github": "latest",
