--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,7 @@ package-lock.json
 #######
 plugins/*/
 configs/*.js
-www/js/vendor/
-www/css/vendor/
-www/js/*.min.js
-www/css/*.min.css
+themes/default/js/vendor/
+themes/default/css/vendor/
+themes/default/js/*.min.js
+themes/default/css/*.min.css
