--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"stop-pm2": "pm2 stop .pm2-process.json",
 		"clean": "rm -rf node_modules package-lock.json && npm install",
 		"update": "rm -f package-lock.json && npm update",
-		"vendor": "cpy node_modules/cash-dom/dist/cash.min.js www/js/vendor/cash-dom/ && cpy node_modules/bulma/css/bulma.min.css www/css/vendor/bulma/ && cpy node_modules/vanilla-lazyload/dist/lazyload.min.js www/js/vendor/lazyload/",
+		"vendor": "cpy node_modules/cash-dom/dist/cash.min.js themes/default/js/vendor/cash-dom/ && cpy node_modules/bulma/css/bulma.min.css themes/default/css/vendor/bulma/ && cpy node_modules/vanilla-lazyload/dist/lazyload.min.js themes/default/js/vendor/lazyload/",
 		"lint": "eslint ./ --cache --ignore-pattern .gitignore",
 		"lint-fix": "eslint ./ --cache --ignore-pattern .gitignore --fix --rule 'snakecasejs/snakecasejs: off'",
 		"git-set-upstream": "git remote add upstream git@github.com:ptkdev/yourprojectname.git && git fetch upstream",
@@ -42,7 +42,7 @@
 		"npm-publish-master": "git checkout master && npm publish",
 		"npm-publish-beta": "git checkout beta && npm publish --tag beta",
 		"npm-publish-nightly": "git checkout nightly && npm publish --tag nightly",
-		"webp": "cwebp -q 100 ./www/img/logo.png -o ./www/img/logo.webp",
+		"webp": "cwebp -q 100 ./themes/default/img/logo.png -o ./themes/default/img/logo.webp",
 		"contributors-generate": "all-contributors generate",
 		"docs": "markserv ./docs/README.md",
 		"test": "jest",
@@ -101,6 +101,8 @@
 		"gulp-rename": "latest",
 		"gulp-nodemon": "latest",
 		"gulp-nunjucks": "latest",
+		"gulp-nunjucks-renderer": "latest",
+		"gulp-data": "latest",
 		"gulp-sass": "latest",
 		"husky": "latest",
 		"jest": "latest",
