--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -6,6 +6,9 @@ server {
 	root /var/www/yourprojectname;
 	server_name www.yourprojectname.com;
 
+	error_log /var/www/yourprojectname/logs/errors_nginx.log;
+	access_log /var/www/yourprojectname/logs/access_nginx.log;
+
     location /.well-known {
         root /var/www/html;
         try_files $uri $uri/ =404;
@@ -24,12 +27,18 @@ server {
 	root /var/www/yourprojectname;
 	server_name yourprojectname.com;
 
+	error_log /var/www/yourprojectname/logs/errors_nginx.log;
+	access_log /var/www/yourprojectname/logs/access_nginx.log;
 
 	location ~ /\.git {
 		deny all;
 	}
 
 	location ~ /\node_modules {
+		deny all;
+	}
+
+	location ~ /\logs {
 		deny all;
 	}
 
