--- a/package.json
+++ b/package.json
@@ -101,8 +101,9 @@
 		"gulp-rename": "latest",
 		"gulp-nodemon": "latest",
 		"gulp-nunjucks": "latest",
-		"gulp-nunjucks-renderer": "latest",
+		"gulp-nunjucks-render": "latest",
 		"gulp-data": "latest",
+		"gulp-run": "latest",
 		"gulp-sass": "latest",
 		"husky": "latest",
 		"jest": "latest",
